testsuite/positive/Issue-1052.n
using System;

class A[T]
{
  protected static F(_ : T) : void
  {
    Console.WriteLine(typeof(A[T]));  
  }
}

class B : A[int]
{
  public static G() : void
  {
    F(1)
   }
}

class C : A[string]
{
  public static G() : void
  {
    F(null)
   }
}

module Program
{
  Main() : void
  {
    B.G();
    C.G();
  }
}

/*
BEGIN-OUTPUT
A`1[System.Int32]
A`1[System.String]
END-OUTPUT
*/
